feat: Move hardcoded note strings to resources

--- a/app/src/main/res/layout/note_buttons_ukulele.xml
+++ b/app/src/main/res/layout/note_buttons_ukulele.xml
@@ -13,7 +13,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="67"
-        android:text="G"
+        android:text="@string/note_G"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button2"
@@ -34,7 +34,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="60"
-        android:text="C"
+        android:text="@string/note_C"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button3"
@@ -54,7 +54,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="64"
-        android:text="E"
+        android:text="@string/note_E"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button4"
@@ -74,7 +74,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="69"
-        android:text="A"
+        android:text="@string/note_A"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
