--- a/app/src/main/res/layout/note_buttons_guitar.xml
+++ b/app/src/main/res/layout/note_buttons_guitar.xml
@@ -13,7 +13,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="40"
-        android:text="E"
+        android:text="@string/note_E"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button2"
@@ -34,7 +34,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="45"
-        android:text="A"
+        android:text="@string/note_A"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button3"
@@ -54,7 +54,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="50"
-        android:text="D"
+        android:text="@string/note_D"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button4"
@@ -74,7 +74,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="55"
-        android:text="G"
+        android:text="@string/note_G"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button5"
@@ -94,7 +94,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="59"
-        android:text="B"
+        android:text="@string/note_B"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button6"
@@ -114,7 +114,7 @@
         android:insetBottom="0dp"
         android:onClick="playPitchPipeNote"
         android:tag="64"
-        android:text="E"
+        android:text="@string/note_E"
         app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
