feat: Use hard-coded text size for note buttons
This is needed so we can add translations since other languages use solfege-based systems, and auto text sizing with those results in button text of different sizes, which looks fun but not necessarily good :)

--- a/app/src/main/res/layout/note_buttons_guitar.xml
+++ b/app/src/main/res/layout/note_buttons_guitar.xml
@@ -14,7 +14,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="40"
         android:text="@string/note_E"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button2"
         app:layout_constraintDimensionRatio="1:1"
@@ -35,7 +35,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="45"
         android:text="@string/note_A"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button3"
         app:layout_constraintDimensionRatio="1:1"
@@ -55,7 +55,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="50"
         android:text="@string/note_D"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button4"
         app:layout_constraintDimensionRatio="1:1"
@@ -75,7 +75,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="55"
         android:text="@string/note_G"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button5"
         app:layout_constraintDimensionRatio="1:1"
@@ -95,7 +95,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="59"
         android:text="@string/note_B"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button6"
         app:layout_constraintDimensionRatio="1:1"
@@ -115,7 +115,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="64"
         android:text="@string/note_E"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
