--- a/app/src/main/res/layout/note_buttons_mandolin.xml
+++ b/app/src/main/res/layout/note_buttons_mandolin.xml
@@ -14,7 +14,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="55"
         android:text="@string/note_G"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button2"
         app:layout_constraintDimensionRatio="1:1"
@@ -35,7 +35,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="62"
         android:text="@string/note_D"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button3"
         app:layout_constraintDimensionRatio="1:1"
@@ -55,7 +55,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="69"
         android:text="@string/note_A"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button4"
         app:layout_constraintDimensionRatio="1:1"
@@ -75,7 +75,7 @@
         android:onClick="playPitchPipeNote"
         android:tag="76"
         android:text="@string/note_E"
-        app:autoSizeTextType="uniform"
+        android:textSize="@dimen/note_button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
