--- a/app/src/main/res/layout/note_buttons_ukulele.xml
+++ b/app/src/main/res/layout/note_buttons_ukulele.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/note_button_height_width"
+        android:layout_height="@dimen/note_button_height_width"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -15,20 +14,13 @@
         android:tag="67"
         android:text="@string/note_G"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius"
-        app:layout_constraintBottom_toTopOf="@id/button2"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:cornerRadius="@dimen/button_corner_radius" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/button_margin"
+        android:layout_width="@dimen/note_button_height_width"
+        android:layout_height="@dimen/note_button_height_width"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -36,19 +28,13 @@
         android:tag="60"
         android:text="@string/note_C"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius"
-        app:layout_constraintBottom_toTopOf="@id/button3"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button1" />
+        app:cornerRadius="@dimen/button_corner_radius" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/button_margin"
+        android:layout_width="@dimen/note_button_height_width"
+        android:layout_height="@dimen/note_button_height_width"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -56,19 +42,13 @@
         android:tag="64"
         android:text="@string/note_E"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius"
-        app:layout_constraintBottom_toTopOf="@id/button4"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:cornerRadius="@dimen/button_corner_radius" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/button_margin"
+        android:layout_width="@dimen/note_button_height_width"
+        android:layout_height="@dimen/note_button_height_width"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -76,12 +56,5 @@
         android:tag="69"
         android:text="@string/note_A"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:cornerRadius="@dimen/button_corner_radius" />
+</merge>
