--- a/app/src/main/res/layout/note_buttons_guitar.xml
+++ b/app/src/main/res/layout/note_buttons_guitar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <Button
         android:id="@+id/button1"
@@ -14,7 +15,8 @@
         android:tag="40"
         android:text="@string/note_E"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius" />
+        app:cornerRadius="@dimen/button_corner_radius"
+        tools:ignore="SpUsage" />
 
     <Button
         android:id="@+id/button2"
@@ -28,7 +30,8 @@
         android:tag="45"
         android:text="@string/note_A"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius" />
+        app:cornerRadius="@dimen/button_corner_radius"
+        tools:ignore="SpUsage" />
 
     <Button
         android:id="@+id/button3"
@@ -42,7 +45,8 @@
         android:tag="50"
         android:text="@string/note_D"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius" />
+        app:cornerRadius="@dimen/button_corner_radius"
+        tools:ignore="SpUsage" />
 
     <Button
         android:id="@+id/button4"
@@ -56,7 +60,8 @@
         android:tag="55"
         android:text="@string/note_G"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius" />
+        app:cornerRadius="@dimen/button_corner_radius"
+        tools:ignore="SpUsage" />
 
     <Button
         android:id="@+id/button5"
@@ -70,7 +75,8 @@
         android:tag="59"
         android:text="@string/note_B"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius" />
+        app:cornerRadius="@dimen/button_corner_radius"
+        tools:ignore="SpUsage" />
 
     <Button
         android:id="@+id/button6"
@@ -84,5 +90,6 @@
         android:tag="64"
         android:text="@string/note_E"
         android:textSize="@dimen/note_button_text_size"
-        app:cornerRadius="@dimen/button_corner_radius" />
+        app:cornerRadius="@dimen/button_corner_radius"
+        tools:ignore="SpUsage" />
 </merge>
