--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- Don't use all caps for button text, which is the default -->
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="Theme.PitchPipe.NoActionBar">
