revert: Revert "refactor: Use OnClickListener instead of onClick in XML"
This reverts commit 3df9d449a03b0eb5997dff38434d5f05612e8f72.

While this is the "proper" way to do this, it makes the code less consistent because then the instrument buttons still use the XML onClick property, and there's no obvious way to dynamically assign the OnClickListener to two different groups of buttons. There's no urgency to fix this, so making it consistent seems like the better choice at this point.

--- a/app/src/main/res/layout/note_buttons_ukulele.xml
+++ b/app/src/main/res/layout/note_buttons_ukulele.xml
@@ -11,6 +11,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="67"
         android:text="@string/note_G"
         android:textSize="@dimen/note_button_text_size"
@@ -25,6 +26,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="60"
         android:text="@string/note_C"
         android:textSize="@dimen/note_button_text_size"
@@ -39,6 +41,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="64"
         android:text="@string/note_E"
         android:textSize="@dimen/note_button_text_size"
@@ -53,6 +56,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="69"
         android:text="@string/note_A"
         android:textSize="@dimen/note_button_text_size"
