--- a/app/src/main/res/layout/note_buttons_banjo.xml
+++ b/app/src/main/res/layout/note_buttons_banjo.xml
@@ -11,6 +11,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="67"
         android:text="@string/note_G"
         android:textSize="@dimen/note_button_text_size"
@@ -25,6 +26,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="50"
         android:text="@string/note_D"
         android:textSize="@dimen/note_button_text_size"
@@ -39,6 +41,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="55"
         android:text="@string/note_G"
         android:textSize="@dimen/note_button_text_size"
@@ -53,6 +56,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="59"
         android:text="@string/note_B"
         android:textSize="@dimen/note_button_text_size"
@@ -67,6 +71,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="playPitchPipeNote"
         android:tag="62"
         android:text="@string/note_D"
         android:textSize="@dimen/note_button_text_size"
