feat: Replace instrument buttons snackbar with tooltips
I was never happy with the snackbar; it feels pretty intrusive to have it pop up every time the instrument button is pressed. This feels more elegant, and hopefully not too hidden or confusing, assuming if the user has any questions they'll press the info button

Also fix some formatting warnings about variables that will never be null and an unneeded semicolon

--- a/app/src/main/res/layout/instrument_buttons.xml
+++ b/app/src/main/res/layout/instrument_buttons.xml
@@ -14,7 +14,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
-        android:tag="@string/button_tag_guitar"
+        android:tooltipText="@string/button_tag_guitar"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_guitar_icon"
         app:iconGravity="textStart"
@@ -29,7 +29,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
-        android:tag="@string/button_tag_ukulele"
+        android:tooltipText="@string/button_tag_ukulele"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_ukulele_icon"
         app:iconGravity="textStart"
@@ -44,7 +44,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
-        android:tag="@string/button_tag_mandolin"
+        android:tooltipText="@string/button_tag_mandolin"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_mandolin_icon"
         app:iconGravity="textStart"
@@ -59,7 +59,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
-        android:tag="@string/button_tag_banjo"
+        android:tooltipText="@string/button_tag_banjo"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_banjo_icon"
         app:iconGravity="textStart"
